Spacing fixes for dashboard

--- a/src/main/webapp/app/sass/organisms/_foster-home-locator.scss
+++ b/src/main/webapp/app/sass/organisms/_foster-home-locator.scss
@@ -1,3 +1,12 @@
-.foster-home-locator__search-input-controls{
+.foster-home-locator__search-input-control{
   margin-bottom: 15px;
+}
+
+.foster-home-locator__search-map{
+  margin-bottom: 30px;
+}
+
+.foster-home-locator__search-results{
+  max-height: 500px;
+  overflow: scroll;
 }
